add `hotkeys` card

--- a/src/content/projects/1.md
+++ b/src/content/projects/1.md
@@ -1,4 +1,6 @@
 ---
 title: 'HOTKEYS'
 description: 'A media service for computer shortcuts, made for those who want to improve their computer work.'
+image: '../../../projects/hotkeys.png'
+link: 'https://hotkeys.adc.ac/'
 ---
