update cards with `links` + `external_target`

--- a/src/content/projects/2.md
+++ b/src/content/projects/2.md
@@ -3,4 +3,5 @@ title: 'SKULLS'
 description: 'Store for a collection of NFT Skulls. Immerse yourself in the art and crypto world with our collection'
 image: '../../../projects/skull.png'
 link: 'https://nft.bozzhik.ru/'
+external_target: true
 ---
