--- a/src/content/projects/2.md
+++ b/src/content/projects/2.md
@@ -1,4 +1,5 @@
 ---
+type: 'project'
 title: 'SKULLS'
 description: 'Store for a collection of NFT Skulls. Immerse yourself in the art and crypto world with our collection'
 image: '../../../projects/skull.png'
